--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "scan_fmt"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["wlentz"]
 description = "A simple scanf()-like input for Rust"
 repository = "https://github.com/wlentz/scan_fmt"
 license = "MIT"
 readme = "README.md"
 
+[features]
+default = ["regex"]
+
 [dependencies]
-regex = "0.2.6"
+regex = { version = "~1.1.6", optional = true }
 
 [lib]
 name = "scan_fmt"
