--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 default = ["regex"]
 
 [dependencies]
-regex = { version = "~1.1.6", optional = true }
+regex = { version = "1", optional = true }
 
 [lib]
 name = "scan_fmt"
